# rocketperson7.github.io

./: CNAME  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html
.github/workflows/: deploy.yml
_posts/: 2023-10-12-welcome-to-jekyll.markdown
src/: app.rs
